docs: 补充 CompletableFuture 审查报告 — thenCombine 方案、线程池合规、结构化并发评估
- M1 新增 thenCombine + 虚拟线程重写方案
- 新增线程池合规性审查章节（3 处违规标记）
- 新增结构化并发评估（Java 21 Preview 结论：暂不引入）
- 更新优先级建议为 P0-P3 编号
- 结论拆分为原始审查 + 补充评估两部分